Added the generation of a script that records the compile-time error message in a file in the corresponding part of the source tree.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
-#Name project and specify source languages
+#Name project and specify version and languages
 project(adhoc VERSION 0.0.0 LANGUAGES C Fortran)
 
 #Print an error message on an attempt to build inside the source directory tree:
@@ -37,12 +37,38 @@ add_subdirectory(src)
 
 enable_testing()
 
-function(add_mpi_test name num_mpi_proc path)
-   set(test_parameters ${MPIEXEC_NUMPROC_FLAG} ${num_mpi_proc} )
-   add_test(NAME ${name} COMMAND ${MPIEXEC} ${test_parameters} "${path}")
-   set_property(TEST ${name} PROPERTY PASS_REGULAR_EXPRESSION "Test passed.")
-endfunction(add_mpi_test)
+set(compiler ${CMAKE_Fortran_COMPILER_ID})
 
-set(tests_root ${CMAKE_CURRENT_BINARY_DIR}/src/tests)
+if (CMAKE_VERSION VERSION_GREATER 3.2.3) 
+  # Detect Fortran compiler version directly
+  set(compiler_version "${CMAKE_Fortran_COMPILER_VERSION}")
+else()
+  # Use the C compiler version as a proxy for the Fortran compiler version (won't work with NAG)
+  set(compiler_version "${CMAKE_C_COMPILER_VERSION}")
+endif()
 
-add_test(gnu-bug-55824 src/gnu/)
+function(add_compile_time_test name path base ext)
+  set(executable base)
+  # Copy the source to the binary tree 
+  configure_file(
+    ${CMAKE_SOURCE_DIR}/${path}/${base}.${ext} 
+    ${CMAKE_BINARY_DIR}/${path}/${base}.${ext} 
+    COPYONLY
+  )
+  # Write a script to compile the code at test time instead of at build time so 
+  # CMake doesn't bail during the build process because of the compilation failure
+  set(bug_harness "${CMAKE_BINARY_DIR}/staging/test-${base}.sh")
+  install(
+      FILES "${bug_harness}"
+      PERMISSIONS WORLD_EXECUTE WORLD_READ WORLD_WRITE OWNER_EXECUTE OWNER_READ OWNER_WRITE GROUP_EXECUTE GROUP_READ GROUP_WRITE
+      DESTINATION ${CMAKE_BINARY_DIR}/${path}
+  )
+  file(WRITE  "${bug_harness}" "#!/bin/bash\n")
+  file(APPEND "${bug_harness}" "cd ${CMAKE_BINARY_DIR}/${path}\n")
+  file(APPEND "${bug_harness}" 
+              "$ENV{FC} ${base}.${ext} -o ${base} &> ${CMAKE_SOURCE_DIR}/${path}/${compiler}-${compiler_version}.out\n")
+  add_test(NAME ${name} COMMAND "${path}/test-${base}.sh")
+  set_property(TEST ${name} PROPERTY PASS_REGULAR_EXPRESSION "Test passed.")
+endfunction(add_compile_time_test)
+
+add_compile_time_test(gnu-bug-55824 src/gnu/nasa/bug-55824 ice-on-pack-unlimited-polymorphic f90)
