Added assumed-rank and DO CONCURRENT bugs for Portland Group.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,4 +45,6 @@ if("${gfortran_compiler}")
 elseif("${portland_group_compiler}")
   add_compile_time_test(pgi-bug-21894 src/pgi/opencoarrays/bug-21894 no-c_ptrdiff_t f90)
   add_compile_time_test(pgi-bug-xxxxx src/pgi/opencoarrays/bug-xxxxx save-bind-c-conflict f90)
+  add_compile_time_test(pgi-bug-xxxxy src/pgi/opencoarrays/bug-xxxxy assumed-rank f90)
+  add_compile_time_test(pgi-bug-xxxxz src/pgi/opencoarrays/bug-xxxxz do-concurrent f90)
 endif()
