--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,8 @@ if("${gfortran_compiler}")
   add_compile_time_test(gnu-bug-55824 src/gnu/nasa/bug-55824 ice-on-pack-unlimited-polymorphic f90)
   add_compile_time_test(gnu-bug-66833 src/gnu/opencoarrays/bug-66833 ice-on-assumed-rank-character f90)
 elseif("${portland_group_compiler}")
-  add_compile_time_test(pgi-bug-21894 src/pgi/opencoarrays/bug-21894 c_ptrdiff_t f90)
-  add_compile_time_test(pgi-bug-xxxxx src/pgi/opencoarrays/bug-xxxxx save-bind-c f90)
-  add_compile_time_test(pgi-bug-xxxxy src/pgi/opencoarrays/bug-xxxxy assumed-rank f90)
-  add_compile_time_test(pgi-bug-xxxxz src/pgi/opencoarrays/bug-xxxxz do-concurrent f90)
+  add_compile_time_test(pgi-bug-21894    src/pgi/opencoarrays/bug-21894 c_ptrdiff_t f90)
+  add_compile_time_test(pgi-bug-21918-01 src/pgi/opencoarrays/bug-xxxxx save-bind-c f90)
+  add_compile_time_test(pgi-bug-21918-02 src/pgi/opencoarrays/bug-xxxxy assumed-rank f90)
+  add_compile_time_test(pgi-bug-21918-03 src/pgi/opencoarrays/bug-xxxxz do-concurrent f90)
 endif()
