Adding Bob Numrich's gfortran bug report.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ enable_testing()
 if("${gfortran_compiler}")
   add_compile_time_test(gnu-bug-55824 src/gnu/nasa/bug-55824 ice-on-pack-unlimited-polymorphic f90)
   add_compile_time_test(gnu-bug-66833 src/gnu/opencoarrays/bug-66833 ice-on-assumed-rank-character f90)
+  add_compile_time_test(gnu-bug-68196 src/gnu/numrich/bug-68196 ice-on-proc-ptr-func-comp f90)
 elseif("${portland_group_compiler}")
   add_compile_time_test(pgi-bug-21894    src/pgi/opencoarrays/bug-21894 c_ptrdiff_t f90)
   add_compile_time_test(pgi-bug-21918-01 src/pgi/opencoarrays/bug-xxxxx save-bind-c f90)
