--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,12 +39,14 @@ enable_testing()
 
 if("${gfortran_compiler}")
   add_compile_time_test(gnu-bug-55824 src/gnu/nasa/bug-55824 ice-on-pack-unlimited-polymorphic f90)
-  add_compile_time_test(gnu-bug-68196 src/gnu/numrich/bug-68196 ice-on-proc-ptr-func-comp f90)
   add_compile_time_test(gnu-bug-66681 src/gnu/opencoarrays/bug-66681 assign_this_image_to_complex f90)
   add_compile_time_test(gnu-bug-66833 src/gnu/opencoarrays/bug-66833 ice-on-assumed-rank-character f90)
-  add_compile_time_test(gnu-bug-70696  src/gnu/opencoarrays/bug-70696 post_host_associated_event f90)
-  add_compile_time_test(gnu-bug-70697  src/gnu/opencoarrays/bug-70697 tree f90)
-  add_compile_time_test(gnu-bug-59694  src/gnu/sourcery/bug-59694 final f90)
+  add_compile_time_test(gnu-bug-68196 src/gnu/numrich/bug-68196 ice-on-proc-ptr-func-comp f90)
+  add_compile_time_test(gnu-bug-70696 src/gnu/opencoarrays/bug-70696 post_host_associated_event f90)
+  add_compile_time_test(gnu-bug-70697 src/gnu/opencoarrays/bug-70697 tree f90)
+  add_compile_time_test(gnu-bug-59694 src/gnu/sourcery/bug-59694 final f90)
+  add_compile_time_test(gnu-bug-71952 src/gnu/sourcery/bug-71952 coarray-access-with-array-partref f90)
+  add_compile_time_test(gnu-bug-71156 src/gnu/sourcery/bug-71156 consistency f90)
 elseif("${portland_group_compiler}")
   add_compile_time_test(pgi-bug-21894    src/pgi/opencoarrays/bug-21894 c_ptrdiff_t f90)
   add_compile_time_test(pgi-bug-21918-01 src/pgi/opencoarrays/bug-xxxxx save-bind-c f90)
