Intel issue DPD200416083
CAF wrapped into OOP

Intel Fortran Compiler seems to be confused when calling a TBP
associated to a caoarray component of a derived type. When the `add` TBP
of the test is invoked a SIGSEGV is generated.

This is currently an official issue for which deeper investigations are
pending, but not yet an official bug.

I reproduced the issue with Intel v. 16.0.3 and 17.0.1, under GNU Linux
disto (with Arch Linux and Ubuntu).

> modify CMakeLists.txt, but unsure of results...

Signed-off-by: Stefano Zaghi <stefano.zaghi@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ elseif ("${CMAKE_Fortran_COMPILER_ID}" MATCHES "PGI" )
   set(portland_group_compiler true)
 elseif ("${CMAKE_Fortran_COMPILER_ID}" MATCHES "Cray" )
   set(cray_compiler true)
+elseif ("${CMAKE_Fortran_COMPILER_ID}" MATCHES "Intel" )
+  set(intel_compiler true)
 endif()
 
 include(AddCompileTimeTest.cmake)
@@ -55,6 +57,8 @@ elseif("${portland_group_compiler}")
 elseif("${cray_compiler}")
   add_compile_time_test(cce-bug-821337 src/cce/nasa/bug-821337 generic-resolution f90)
   add_cmake_test(cmake-bug-xxxxx src/cmake/bug-xxxxx)
+elseif("${intel_compiler}")
+  add_compile_time_test(intel-issue-DPD200416083 src/intel/issue-DPD200416083 oop-caf f90)
 else()
   message(FATAL_ERROR
     "\n"
