--- a/src/cmake/bug-16234/CMakeLists.txt
+++ b/src/cmake/bug-16234/CMakeLists.txt
@@ -1,3 +1,6 @@
-cmake_minimum_required(VERSION 3.6)
-project (fortran-submodule-issue Fortran)
-add_executable(submodule-issue-reproducer fortran-submodule.F90)
+cmake_minimum_required(VERSION 3.7.0)
+project (fortran-submodule-test Fortran)
+add_executable(family-tree fortran-submodules.F90)
+enable_testing()
+add_test(test-submodule-support family-tree)
+set_tests_properties(test-submodule-support PROPERTIES PASS_REGULAR_EXPRESSION "Test passed.")
